feat: complete cursor-feedback extension
- Add MCP Server with interactive_feedback and get_system_info tools
- Add VS Code sidebar panel for feedback collection
- Add Markdown rendering support using marked.js
- Add multi-language support (zh-CN, zh-TW, en)
- Add image upload support
- Add multi-window project isolation
- Publish to npm as @jianger666/cursor-feedback
- Publish to VS Code Marketplace

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,7 +1,10 @@
 .vscode/**
 .vscode-test/**
 src/**
-.gitignore
-*.map
 node_modules/**
+.gitignore
+.eslintrc*
+*.map
 tsconfig.json
+*.ts
+!dist/**
