feat: 添加多项新功能
1. 上传文件/文件夹功能
   - 三个按钮：图片、文件、文件夹
   - 使用 VS Code 原生文件对话框
   - 文件路径传给 AI 让其读取

2. 自动聚焦到插件窗口
   - 收到新请求时自动打开侧边栏

3. 启动 Loading
   - WebView 加载时显示加载动画
   - 支持多语言

4. 其他改进
   - 超时优先级: 环境变量 > 工具参数 > 默认值
   - 默认端口改为 61927
   - 移除 MCP_FEEDBACK_PORT 配置
   - 添加 @latest 到 npx 配置

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@jianger666/cursor-feedback",
+  "name": "cursor-feedback",
   "displayName": "Cursor Feedback",
   "description": "Interactive feedback collection for AI agents in Cursor/VS Code - MCP Server with sidebar UI",
-  "version": "0.1.1",
+  "version": "0.1.7",
   "author": "jianger666",
   "license": "MIT",
   "repository": {
@@ -71,21 +71,11 @@
     "configuration": {
       "title": "Cursor Feedback",
       "properties": {
-        "cursorFeedback.serverPort": {
-          "type": "number",
-          "default": 5678,
-          "description": "Port for the MCP server HTTP interface"
-        },
-        "cursorFeedback.autoStartServer": {
-          "type": "boolean",
-          "default": true,
-          "description": "Automatically start listening for feedback requests on extension activation"
-        },
         "cursorFeedback.language": {
           "type": "string",
           "enum": ["zh-CN", "zh-TW", "en"],
           "default": "zh-CN",
-          "description": "Interface language"
+          "description": "Interface language (zh-CN: 简体中文, zh-TW: 繁體中文, en: English)"
         }
       }
     }
