--- a/package.json
+++ b/package.json
@@ -54,7 +54,11 @@
         "cursorFeedback.language": {
           "type": "string",
           "default": "auto",
-          "enum": ["auto", "zh-CN", "en"],
+          "enum": [
+            "auto",
+            "zh-CN",
+            "en"
+          ],
           "enumDescriptions": [
             "Auto detect based on system language",
             "简体中文",
@@ -107,7 +111,9 @@
     "watch": "tsc -watch -p ./",
     "lint": "eslint src --ext ts",
     "start:mcp": "node dist/mcp-server.js",
-    "prepublishOnly": "npm run compile"
+    "prepublishOnly": "npm run compile",
+    "update-changelog": "node scripts/update-changelog.js",
+    "version": "npm run update-changelog && git add CHANGELOG.md"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -116,6 +122,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
+    "release-please": "^17.2.0",
     "typescript": "^5.3.0"
   },
   "dependencies": {
