--- a/package.json
+++ b/package.json
@@ -111,10 +111,12 @@
     "watch": "tsc -watch -p ./",
     "lint": "eslint src --ext ts",
     "start:mcp": "node dist/mcp-server.js",
-    "prepublishOnly": "npm run compile",
+    "prepublishOnly": "npm run check-changelog && npm run compile",
+    "check-changelog": "node scripts/check-changelog.js",
     "release": "standard-version",
     "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -123,6 +125,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
+    "husky": "^9.1.7",
     "release-please": "^17.2.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.3.0"
