--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cursor-feedback",
   "displayName": "Cursor Feedback",
-  "description": "Save your Cursor monthly quota! Interactive feedback loop for AI chat - one conversation, unlimited interactions via MCP",
+  "description": "One Cursor conversation, unlimited AI interactions - Save your monthly request quota! Interactive feedback loop for AI chat via MCP",
   "version": "1.0.9",
   "icon": "icon.png",
   "author": "jianger666",
